Moved FreeRTOS hooks into the correct location. Added missing virtual functions for SerialUnsupported.

--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
@@ -318,46 +318,41 @@
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Chimera\chimera.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera_allocator.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera_buffer.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera_container.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera_crc.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera_exception.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera_logging.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera_spi.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera_system.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera_threading.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera_watchdog.cpp" />
-    <ClInclude Include="..\..\..\Chimera\allocator.hpp" />
-    <ClInclude Include="..\..\..\Chimera\assert.hpp" />
-    <ClInclude Include="..\..\..\Chimera\atomic.hpp" />
-    <ClInclude Include="..\..\..\Chimera\buffer.hpp" />
-    <ClInclude Include="..\..\..\Chimera\chimera.hpp" />
-    <ClInclude Include="..\..\..\Chimera\container.hpp" />
-    <ClInclude Include="..\..\..\Chimera\crc.hpp" />
-    <ClInclude Include="..\..\..\Chimera\dma.hpp" />
-    <ClInclude Include="..\..\..\Chimera\event.hpp" />
-    <ClInclude Include="..\..\..\Chimera\exception.hpp" />
-    <ClInclude Include="..\..\..\Chimera\gpio.hpp" />
-    <ClInclude Include="..\..\..\Chimera\logging.hpp" />
-    <ClInclude Include="..\..\..\Chimera\memory.hpp" />
-    <ClInclude Include="..\..\..\Chimera\modules\memory\heap\heap.hpp" />
-    <ClInclude Include="..\..\..\Chimera\power.hpp" />
-    <ClInclude Include="..\..\..\Chimera\preprocessor.hpp" />
-    <ClInclude Include="..\..\..\Chimera\serial.hpp" />
-    <ClInclude Include="..\..\..\Chimera\spi.hpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\sim\sim_chimera.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\sim\sim_chimera_system.cpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\allocator.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\buffer.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\chimera.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\container.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\crc.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\dma.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\event.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\gpio.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\memory.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\power.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\preprocessor.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\serial.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\sim\sim_chimera.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\sim\sim_chimera_system.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\spi.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\system.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\threading.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\utilities.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\version.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\watchdog.hpp" />
     <ClInclude Include="..\..\..\Chimera\standalone\config\chimera\chimeraConfig.hpp" />
     <ClInclude Include="..\..\..\Chimera\standalone\config\chimera\chimeraPort.hpp" />
-    <ClInclude Include="..\..\..\Chimera\system.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading.hpp" />
-    <ClInclude Include="..\..\..\Chimera\utilities.hpp" />
-    <ClInclude Include="..\..\..\Chimera\watchdog.hpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\src\chimera.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\src\chimera_allocator.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\src\chimera_buffer.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\src\chimera_container.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\src\chimera_crc.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\src\chimera_spi.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\src\chimera_system.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\src\chimera_threading.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\Aurora\Chimera\Chimera\src\chimera_watchdog.cpp" />
     <ClCompile Include="..\..\..\Chimera\algorithm\register_optimizer.cpp" />
     <ClInclude Include="..\..\..\Chimera\algorithm\register_optimizer.hpp" />
-    <ClInclude Include="..\..\..\Chimera\atomic\atomic_32bit.hpp" />
-    <ClInclude Include="..\..\..\Chimera\atomic\atomic_freertos.hpp" />
-    <ClInclude Include="..\..\..\Chimera\atomic\atomic_stl.hpp" />
     <ClInclude Include="..\..\..\Chimera\base\buffer_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\base\crc_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\base\dma_base.hpp" />
@@ -367,9 +362,6 @@
     <ClInclude Include="..\..\..\Chimera\base\spi_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\base\threading_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\base\watchdog_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\constants\common.hpp" />
-    <ClInclude Include="..\..\..\Chimera\constants\physics.hpp" />
-    <ClInclude Include="..\..\..\Chimera\constants\units.hpp" />
     <ClInclude Include="..\..\..\Chimera\extensions\common.hpp" />
     <ClInclude Include="..\..\..\Chimera\extensions\spi_ext.hpp" />
     <ClInclude Include="..\..\..\Chimera\interface\buffer_intf.hpp" />
@@ -389,33 +381,18 @@
     <ClInclude Include="..\..\..\Chimera\interface\system_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\interface\threading_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\interface\watchdog_intf.hpp" />
-    <ClCompile Include="..\..\..\Chimera\modules\freertos\freertos_hooks.cpp" />
-    <ClInclude Include="..\..\..\Chimera\modules\freertos\freertos_hooks.hpp" />
-    <ClCompile Include="..\..\..\Chimera\modules\memory\chimera_memory_device.cpp" />
-    <ClInclude Include="..\..\..\Chimera\modules\memory\blockDevice.hpp" />
-    <ClInclude Include="..\..\..\Chimera\modules\memory\device.hpp" />
-    <ClInclude Include="..\..\..\Chimera\modules\sensors\imu\imu_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\modules\sensors\imu\imu_types.hpp" />
-    <ClCompile Include="..\..\..\Chimera\modules\memory\heap\heap.cpp" />
-    <ClCompile Include="..\..\..\Chimera\modules\threading\chimera_threading_freertos.cpp" />
-    <ClCompile Include="..\..\..\Chimera\modules\threading\chimera_threading_stl.cpp" />
-    <ClCompile Include="..\..\..\Chimera\modules\ulog\serial_sink.cpp" />
-    <ClInclude Include="..\..\..\Chimera\modules\ulog\serial_sink.hpp" />
-    <ClInclude Include="..\..\..\Chimera\modules\ulog\serial_sink_config.hpp" />
-    <ClCompile Include="..\..\..\Chimera\sim\chimera_freertos_hooks_prj.cpp" />
-    <ClCompile Include="..\..\..\Chimera\sim\sim_chimera.cpp" />
-    <ClCompile Include="..\..\..\Chimera\sim\sim_chimera_system.cpp" />
-    <ClInclude Include="..\..\..\Chimera\sim\sim_chimera.hpp" />
     <ClInclude Include="..\..\..\Chimera\sim\config\chimera\chimeraConfig.hpp" />
     <ClInclude Include="..\..\..\Chimera\sim\config\chimera\chimeraPort.hpp" />
     <ClInclude Include="..\..\..\Chimera\sim\config\freertos\FreeRTOSConfig.h" />
     <ClInclude Include="..\..\..\Chimera\threading\extensions.hpp" />
+    <ClInclude Include="..\..\..\Chimera\threading\freertos\freertos_hooks.hpp" />
     <ClInclude Include="..\..\..\Chimera\threading\internal_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\threading\mutex.hpp" />
     <ClInclude Include="..\..\..\Chimera\threading\semaphore.hpp" />
     <ClInclude Include="..\..\..\Chimera\threading\thread.hpp" />
     <ClInclude Include="..\..\..\Chimera\threading\types.hpp" />
     <ClInclude Include="..\..\..\Chimera\threading\freertos\freertos_sync_primitives.hpp" />
+    <ClCompile Include="..\..\..\Chimera\threading\freertos\freertos_hooks.cpp" />
     <ClCompile Include="..\..\..\Chimera\threading\freertos\freertos_threading_implementation.cpp" />
     <ClCompile Include="..\..\..\Chimera\threading\stl\stl_threading_implementation.cpp" />
     <ClInclude Include="..\..\..\Chimera\threading\stl\stl_sync_primitives.hpp" />
