--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
@@ -306,134 +306,136 @@
       <PreprocessorDefinitions>$(ChimeraCompilerDefines);$(ChimeraBackendCompilerDefines);$(ProjectCompilerDefines);%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\Chimera\algorithm\register_optimizer.cpp" />
-    <ClCompile Include="..\..\..\Chimera\allocator\chimera_allocator.cpp" />
-    <ClCompile Include="..\..\..\Chimera\buffer\chimera_buffer.cpp" />
-    <ClCompile Include="..\..\..\Chimera\chimera.cpp" />
-    <ClCompile Include="..\..\..\Chimera\container\chimera_container.cpp" />
-    <ClCompile Include="..\..\..\Chimera\peripherals\crc\chimera_crc.cpp" />
-    <ClCompile Include="..\..\..\Chimera\peripherals\spi\chimera_spi.cpp" />
-    <ClCompile Include="..\..\..\Chimera\peripherals\watchdog\chimera_watchdog.cpp" />
-    <ClCompile Include="..\..\..\Chimera\system\chimera_system.cpp" />
-    <ClCompile Include="..\..\..\Chimera\threading\freertos\freertos_hooks.cpp" />
-    <ClCompile Include="..\..\..\Chimera\threading\freertos\freertos_threading_implementation.cpp" />
-    <ClCompile Include="..\..\..\Chimera\threading\stl\stl_threading_implementation.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
-    <None Include="..\..\..\Chimera\algorithm\build.jam" />
-    <None Include="..\..\..\Chimera\allocator\build.jam" />
+    <None Include="..\..\..\Chimera\algorithm" />
+    <None Include="..\..\..\Chimera\buffer" />
     <None Include="..\..\..\Chimera\build.jam" />
-    <ClInclude Include="..\..\..\Chimera\clock">
-      <FileType>Document</FileType>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Chimera\crc">
-      <FileType>Document</FileType>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Chimera\dma">
-      <FileType>Document</FileType>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Chimera\ethernet">
-      <FileType>Document</FileType>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Chimera\gpio">
-      <FileType>Document</FileType>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|STM32F446RE'">false</ExcludedFromBuild>
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|STM32F446RE'">true</DeploymentContent>
-    </ClInclude>
-    <None Include="..\..\..\Chimera\peripherals\build.jam" />
-    <ClInclude Include="..\..\..\Chimera\power">
-      <FileType>Document</FileType>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Chimera\spi">
-      <FileType>Document</FileType>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Chimera\thread">
-      <FileType>Document</FileType>
-    </ClInclude>
-    <None Include="..\..\..\Chimera\threading\build.jam" />
-    <ClInclude Include="..\..\..\Chimera\timer">
-      <FileType>Document</FileType>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Chimera\watchdog">
-      <FileType>Document</FileType>
-    </ClInclude>
+    <None Include="..\..\..\Chimera\callback" />
+    <None Include="..\..\..\Chimera\clock" />
+    <None Include="..\..\..\Chimera\common" />
+    <None Include="..\..\..\Chimera\container" />
+    <None Include="..\..\..\Chimera\crc" />
+    <None Include="..\..\..\Chimera\dma" />
+    <None Include="..\..\..\Chimera\ethernet" />
+    <None Include="..\..\..\Chimera\event" />
+    <None Include="..\..\..\Chimera\gpio" />
+    <None Include="..\..\..\Chimera\power" />
+    <None Include="..\..\..\Chimera\serial" />
+    <None Include="..\..\..\Chimera\spi" />
+    <None Include="..\..\..\Chimera\system" />
+    <None Include="..\..\..\Chimera\thread" />
+    <None Include="..\..\..\Chimera\timer" />
+    <None Include="..\..\..\Chimera\uart" />
+    <None Include="..\..\..\Chimera\usart" />
+    <None Include="..\..\..\Chimera\utility" />
+    <None Include="..\..\..\Chimera\watchdog" />
     <None Include="stm32.props" />
     <None Include="ChimeraStaticLibrary-Debug.vgdbsettings" />
     <None Include="ChimeraStaticLibrary-Release.vgdbsettings" />
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\Chimera\algorithm\register_optimizer.hpp" />
-    <ClInclude Include="..\..\..\Chimera\allocator\allocator.hpp" />
-    <ClInclude Include="..\..\..\Chimera\buffer\buffer.hpp" />
-    <ClInclude Include="..\..\..\Chimera\buffer\buffer_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\buffer\buffer_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\callback\callback_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\callback\callback_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\chimera.hpp" />
-    <ClInclude Include="..\..\..\Chimera\common\common_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\common\compiler_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\common\preprocessor.hpp" />
-    <ClInclude Include="..\..\..\Chimera\container\container.hpp" />
-    <ClInclude Include="..\..\..\Chimera\event\event.hpp" />
-    <ClInclude Include="..\..\..\Chimera\event\event_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\event\event_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\event\event_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\clock\clock_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\clock\clock_types_fwd.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\crc\crc.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\crc\crc_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\crc\crc_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\crc\crc_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\dma\dma.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\dma\dma_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\dma\dma_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\dma\dma_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\ethernet\ethernet_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\gpio\gpio.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\gpio\gpio_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\gpio\gpio_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\gpio\gpio_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\peripheral_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\power\power.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\power\power_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\power\power_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\power\power_types_fwd.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\spi\spi.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\spi\spi_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\spi\spi_ext.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\spi\spi_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\spi\spi_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\timer\pwm_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\timer\pwm_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\watchdog\watchdog.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\watchdog\watchdog_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\watchdog\watchdog_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\peripherals\watchdog\watchdog_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\serial\serial.hpp" />
-    <ClInclude Include="..\..\..\Chimera\serial\serial_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\serial\serial_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\serial\serial_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\system\system.hpp" />
-    <ClInclude Include="..\..\..\Chimera\system\system_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\system\system_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\extensions.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\freertos\freertos_hooks.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\freertos\freertos_sync_primitives.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\internal_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\mutex.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\semaphore.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\stl\stl_sync_primitives.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\thread.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\threading.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\threading_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\threading_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\threading\types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\utilities\utilities.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_base.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\uart\uart_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\usart\usart_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\version.hpp" />
+    <ClCompile Include="..\..\..\Chimera\sim\sim_chimera.cpp" />
+    <ClCompile Include="..\..\..\Chimera\sim\sim_chimera_system.cpp" />
+    <ClInclude Include="..\..\..\Chimera\sim\sim_chimera.hpp" />
+    <ClInclude Include="..\..\..\Chimera\sim\sim_chimera_system.hpp" />
+    <ClInclude Include="..\..\..\Chimera\sim\config\chimera\chimeraConfig.hpp" />
+    <ClInclude Include="..\..\..\Chimera\sim\config\chimera\chimeraPort.hpp" />
+    <ClInclude Include="..\..\..\Chimera\sim\config\freertos\FreeRTOSConfig.h" />
+    <ClCompile Include="..\..\..\Chimera\src\algorithm\register_optimizer.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\algorithm\register_optimizer.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\allocator\chimera_allocator.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\allocator\allocator.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\buffer\chimera_buffer.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\buffer\buffer.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\buffer\buffer_base.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\buffer\buffer_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\callback\callback_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\callback\callback_types.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\common\chimera.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\common\chimera.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\common\common_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\common\compiler_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\common\preprocessor.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\container\chimera_container.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\container\container.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\event\event.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\event\event_base.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\event\event_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\event\event_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\peripheral_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_types_fwd.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\crc\chimera_crc.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\crc\crc.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\crc\crc_base.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\crc\crc_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\crc\crc_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\dma\dma.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\dma\dma_base.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\dma\dma_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\dma\dma_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\ethernet\ethernet_intf.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\gpio\chimera_gpio.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_base.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_types_fwd.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\power\chimera_power.cpp" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\spi\chimera_spi.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_base.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_ext.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\pwm_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\pwm_types.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\uart\chimera_uart.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\uart\uart.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\usart\chimera_usart.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\usart\usart.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\watchdog\chimera_watchdog.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\watchdog\watchdog.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\watchdog\watchdog_base.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\watchdog\watchdog_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\watchdog\watchdog_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\serial\serial.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\serial\serial_base.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\serial\serial_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\serial\serial_types.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\serial\chimera_serial.cpp" />
+    <ClCompile Include="..\..\..\Chimera\src\system\chimera_system.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\system\system.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\system\system_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\system\system_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\extensions.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\internal_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\mutex.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\semaphore.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\thread.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\threading.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\threading_base.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\threading_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\types.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\threading\freertos\freertos_hooks.cpp" />
+    <ClCompile Include="..\..\..\Chimera\src\threading\freertos\freertos_threading_implementation.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\freertos\freertos_hooks.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\freertos\freertos_sync_primitives.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\threading\stl\stl_threading_implementation.cpp" />
+    <ClInclude Include="..\..\..\Chimera\src\threading\stl\stl_sync_primitives.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\utilities\utilities.hpp" />
+    <ClInclude Include="..\..\..\Chimera\standalone\config\chimera\chimeraConfig.hpp" />
+    <ClInclude Include="..\..\..\Chimera\standalone\config\chimera\chimeraPort.hpp" />
   </ItemGroup>
 </Project>
