--- a/vs/ChimeraStaticLibraryMSVC/ChimeraStaticLibraryMSVC/ChimeraStaticLibraryMSVC.vcxproj
+++ b/vs/ChimeraStaticLibraryMSVC/ChimeraStaticLibraryMSVC/ChimeraStaticLibraryMSVC.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\peripheral_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_types_fwd.hpp" />
@@ -152,10 +153,12 @@
     <ClCompile Include="..\..\..\Chimera\src\container\chimera_container.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\crc\chimera_crc.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\gpio\chimera_gpio.cpp" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\power\chimera_power.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\spi\chimera_spi.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\uart\chimera_uart.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\usart\chimera_usart.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\watchdog\chimera_watchdog.cpp" />
+    <ClCompile Include="..\..\..\Chimera\src\serial\chimera_serial.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\system\chimera_system.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\threading\freertos\freertos_hooks.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\threading\freertos\freertos_threading_implementation.cpp" />
@@ -235,6 +238,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <AdditionalIncludeDirectories>$(BOOST_ROOT)/boost_1_70_0;$(ProjectDir)../../../../Chimera;$(ProjectDir)../../../../Chimera/Chimera/sim/config/chimera;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4250</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -251,6 +255,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(BOOST_ROOT)/boost_1_70_0;$(ProjectDir)../../../../Chimera;$(ProjectDir)../../../../Chimera/Chimera/sim/config/chimera;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <DisableSpecificWarnings>4250</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -269,6 +274,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <AdditionalIncludeDirectories>$(BOOST_ROOT)/boost_1_70_0;$(ProjectDir)../../../../Chimera;$(ProjectDir)../../../../Chimera/Chimera/sim/config/chimera;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4250</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -289,6 +295,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(BOOST_ROOT)/boost_1_70_0;$(ProjectDir)../../../../Chimera;$(ProjectDir)../../../../Chimera/Chimera/sim/config/chimera;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <DisableSpecificWarnings>4250</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
